# mcp-graph-engine

./: .gitignore  .mcp.json  ANALYSIS_TOOLS_USAGE.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN-BEST-FRIENDS.md  DESIGN-CYPHER.md  DESIGN-MERMAID-EXPORT.md  DESIGN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PODCAST_OVERVIEW.md  README.md  demo_analysis_tools.py  demo_formats.py  prompt.txt  pyproject.toml  run-claude.sh  test_analysis_tools.py  test_embeddings.py  test_embeddings_demo.py  test_embeddings_pure.py  test_embeddings_success.py  test_manual.py  test_server.py  test_server_handlers.py  test_similarity_scores.py  test_spec_requirements.py
.claude/: settings.local.json
.claude/agents/: code-architecture-review.md  concern-clusterer.md  design-conformance.md  diff-analyzer.md  integration-validator.md  replay-guide-generator.md  researcher.md  step-writer.md  vibe-implementer.md
.claude/skills/vibe-coding/: SKILL.md  STUB_MANAGEMENT.md  human-replay-manifesto.md
.claude/skills/vibe-prep/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: OSS-TODO.md  POLISH_SUMMARY.md  SESSION_STATE.md  cypher-progress.md  mcp-graph-engine-progress.md
examples/: ask_graph_demo.py  demo_analysis_tools.py  demo_formats.py  test_server.py
replay-guides/: mcp-graph-engine.md
src/mcp_graph_engine/: __init__.py  cypher.py  graph_engine.py  matcher.py  server.py  session.py  tools.py
src/mcp_graph_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mcp_graph_engine/visualization/: __init__.py  broadcast.py  web_server.py
src/mcp_graph_engine/visualization/static/: graph.js  index.html
tests/: __init__.py  test_add_facts.py  test_add_knowledge.py  test_ask_graph.py  test_ask_graph_integration.py  test_core_functionality.py  test_cypher.py  test_dump_context.py  test_dump_context_integration.py  test_import_export.py  test_mermaid.py  test_server_integration.py
vibing/: Dockerfile
